<resources>
    <string name="app_name">Charging Station App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">地图</string>
    <string name="charging">充电</string>
    <string name="mine">我的</string>
    <string name="scan">扫码</string>
    <string name="reservation">预约</string>
    <string name="inputSn">输入SN</string>
    <string name="quitRespond">退出登录</string>
    <string name="mybalance">我的余额</string>
    <string name="back">返回</string>
    <string name="finished">完成</string>
    <string name="personalsettings">个人设置</string>
    <string name="nickname">昵称</string>
    <string name="inputnickname">请输入昵称。</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="phone">手机</string>
    <string name="email">邮箱</string>
    <string name="inputemail">请输入邮箱。</string>
    <string name="modifypassword">修改登录密码</string>
    <string name="recharge">充值</string>
    <string name="login">登陆</string>
    <string name="registerRequest">注册</string>
    <string name="wuxindianqi">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;武新电气科技有限公司是一家专业从事大功率电力电子设备、智能配电网系统及服务的高科技企业。
        \n\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;主要产品包括有源电力滤波器系列、静止无功发生器系列、动态无功补偿系列、微机综合保护装置、电气成套设备、
        终端客户配电智能化系统及管理服务等。全线产品在提升电能质量、优化控制与节能降耗及服务等方面为客户提供综合解决方案。
        \n\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;凭借雄厚的资金和科研实力，武新电气作为国内领先的大功率电力电子设备、智能配电网系统的供应商，公司系列产品均通过ISO9001、ISO14001、CCC及CQC等认证，
        技术规范完全符合相关的行业标准。产品广泛服务于电力、冶金、煤炭、有色金属、汽车、电气化铁路、风力发电、船舶及装备制造等领域，用户遍及全国各省市，
        在业内享有较高的盛誉。
        \n\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;武新电气拥有专业的研发技术团队，具备强大的自主创新能力，拥有数十项各类专利及软件版权，并与清华大学、华中科技大学有着紧密的合作关系。
        拥有各种高压、低压有载试验装备、仿真系统、先进的电力电子及智能配网试验装置等设施。
        \n\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160; 公司坚持科技领先、亲近客户的经营方针，持续为顾客带来超值回报，以崭新的形象引领行业的发展。
        为客户创造价值、为社会创造财富、为员工创造机会是我们的责任。
    </string>
    <string name="record">消费记录</string>
    <string name="about">关于</string>
    <string name="checkupdata">检查更新</string>
    <string name="version">版本信息</string>
    <string name="aboutwoostar">关于武新电气</string>
    <string name="advice">投诉建议</string>
    <string name="signin">登录</string>
    <string name="phonenumber">手机号码</string>
    <string name="userpassword">用户密码</string>
    <string name="pleaseinputphone">请输入手机号码</string>
    <string name="pleaseinputpassword">请输入密码</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="verifycode">手机验证码</string>
    <string name="obtainCode">获取验证码</string>
    <string name="queding">确定</string>
    <string name="forgetpw">忘记密码</string>
    <string name="repassword">新设密码</string>
    <string name="ensurePW">重复密码</string>
    <string name="newpassword">请输入新密码</string>
    <string name="renewpassword">请确认输入密码</string>
    <string name="xianshikongxian">只显示空闲</string>
    <string name="jiaoliuzhuang">显示交流桩</string>
    <string name="显示直流桩">显示直流桩</string>
    <string name="obtainAll">显示全部</string>
    <string name="modifyPW">修改密码</string>
    <string name="oldpassword">历史密码</string>
    <string name="inputoldpassword">请输入历史密码</string>
    <string name="colection">收藏</string>
    <string name="list">列表</string>
    <string name="testpassword">123456</string>
    <string name="left_mark">＞</string>
    <string name="location">位置</string>
    <string name="_000_000km">000.000km</string>
    <string name="wuxin_address">湖北神武汉市黄陂区武湖工业园立山路一号武汉武新电气科技股份有限公司</string>
    <string name="ACslow">交流慢冲</string>
    <string name="ACfast">交流快充</string>
    <string name="navigate">导航</string>
    <string name="collection">收藏</string>
    <string name="name">名称</string>
</resources>
