<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whitesmoke">
        <View
            android:id="@+id/top_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:background="#ff44aacc"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%"/>
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/sencond_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_heightPercent="30%"
            app:layout_marginTopPercent="15%"
            app:layout_widthPercent="100%">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0.3dp"
                android:background="@color/gainsboro"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="33%"
                app:layout_widthPercent="100%"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="0.3dp"
                android:background="@color/gainsboro"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="66%"
                app:layout_widthPercent="100%"/>
            <TextView
                android:layout_width="0.3dp"
                android:layout_height="0dp"
                android:background="@color/gainsboro"
                app:layout_heightPercent="27%"
                app:layout_marginLeftPercent="31%"
                app:layout_marginTopPercent="2.5%"/>
            <TextView
                android:layout_width="0.3dp"
                android:layout_height="0dp"
                android:background="@color/gainsboro"
                app:layout_heightPercent="27%"
                app:layout_marginLeftPercent="31%"
                app:layout_marginTopPercent="35.5%"/>
            <TextView
                android:layout_width="0.3dp"
                android:layout_height="0dp"
                android:background="@color/gainsboro"
                app:layout_heightPercent="27%"
                app:layout_marginLeftPercent="31%"
                app:layout_marginTopPercent="68.5%"/>
            <EditText
                android:id="@+id/oldpasswprd_edittext_modidyPW"
                style="@style/Input_EditText_Configuration"
                android:gravity="center_vertical"
                android:hint="@string/inputoldpassword"
                android:inputType="textPassword"
                android:text="@string/testpassword"
                app:layout_heightPercent="33%"
                app:layout_marginLeftPercent="32%"
                app:layout_marginTopPercent="0%"
                app:layout_widthPercent="68%"/>
            <EditText
                android:id="@+id/password_edittext_modidyPW"
                style="@style/Input_EditText_Configuration"
                android:hint="@string/newpassword"
                android:inputType="textPassword"
                android:text="@string/testpassword"
                app:layout_heightPercent="33%"
                app:layout_marginLeftPercent="32%"
                app:layout_marginTopPercent="33%"
                app:layout_widthPercent="68%"/>
            <EditText
                android:id="@+id/re_password_edittext_modidyPW"
                style="@style/Input_EditText_Configuration"
                android:hint="@string/renewpassword"
                android:inputType="textPassword"
                android:text="@string/testpassword"
                app:layout_heightPercent="33%"
                app:layout_marginLeftPercent="32%"
                app:layout_marginTopPercent="66%"
                app:layout_widthPercent="68%"/>
            <TextView
                style="@style/Text_black"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/repassword"
                android:textSize="20sp"
                app:layout_heightPercent="33%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="33%"
                app:layout_widthPercent="25%"/>
            <TextView
                style="@style/Text_black"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/ensurePW"
                android:textSize="20sp"
                app:layout_heightPercent="33%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="66%"
                app:layout_widthPercent="25%"/>
            <TextView
                style="@style/Text_black"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/oldpassword"
                android:textSize="20sp"
                app:layout_heightPercent="33%"
                app:layout_marginLeftPercent="5%"
                app:layout_widthPercent="25%"/>
        </android.support.percent.PercentRelativeLayout>
        <Button
            android:id="@+id/back_button_modidyPW"
            style="@style/Button_background_title"
            android:onClick="onClick"
            android:text="@string/back"
            android:textSize="20sp"
            app:layout_heightPercent="8%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="15%"/>
        <TextView
            style="@style/Button_background_blue"
            android:layout_centerHorizontal="true"
            android:text="@string/modifyPW"
            android:textSize="25sp"
            app:layout_heightPercent="8%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="30%"/>
        <Button
            android:id="@+id/ensure_button_modifyPW"
            style="@style/Button_background_blue"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"
            android:text="@string/queding"
            android:textSize="20sp"
            app:layout_heightPercent="10%"
            app:layout_marginTopPercent="50%"
            app:layout_widthPercent="90%"/>


    </android.support.percent.PercentRelativeLayout>

</LinearLayout>