<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/whitesmoke"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/top_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:background="#ff44aacc"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%"/>
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/sencond_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_marginTopPercent="15%"
            app:layout_heightPercent="40%"
            app:layout_widthPercent="100%">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0.3dp"
                android:background="@color/gainsboro"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="25%"
                app:layout_widthPercent="100%"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="0.3dp"
                android:background="@color/gainsboro"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="50%"
                app:layout_widthPercent="100%"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="0.3dp"
                android:background="@color/gainsboro"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="75%"
                app:layout_widthPercent="100%"/>
            <TextView
                android:layout_width="0.3dp"
                android:layout_height="0dp"
                app:layout_marginLeftPercent="31%"
                android:background="@color/gainsboro"
                app:layout_marginTopPercent="2.5%"
                app:layout_heightPercent="20%"/>
            <TextView
                android:layout_width="0.3dp"
                android:layout_height="0dp"
                app:layout_marginLeftPercent="31%"
                android:background="@color/gainsboro"
                app:layout_marginTopPercent="52.5%"
                app:layout_heightPercent="20%"/>
            <TextView
                android:layout_width="0.3dp"
                android:layout_height="0dp"
                app:layout_marginLeftPercent="31%"
                android:background="@color/gainsboro"
                app:layout_marginTopPercent="77.5%"
                app:layout_heightPercent="20%"/>
            <TextView
                style="@style/Transparent_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/phonenumber"
                android:textSize="20sp"
                app:layout_heightPercent="25%"
                app:layout_marginLeftPercent="5%"
                app:layout_widthPercent="25%"/>
            <EditText
                android:id="@+id/phone_number_edittext_forget"
                style="@style/Input_EditText_Configuration"
                android:hint="@string/pleaseinputphone"
                app:layout_heightPercent="25%"
                app:layout_marginLeftPercent="32%"
                app:layout_widthPercent="68%"
                android:inputType="phone"/>
            <EditText
                android:id="@+id/verifycode_edittext_forget"
                style="@style/Input_EditText_Configuration"
                android:gravity="center_vertical"
                app:layout_heightPercent="25%"
                android:maxLength="6"
                app:layout_marginTopPercent="25%"
                app:layout_marginLeftPercent="35%"
                app:layout_widthPercent="35%"
                android:inputType="number"/>
            <EditText
                android:id="@+id/password_edittext_forget"
                style="@style/Input_EditText_Configuration"
                android:hint="@string/newpassword"
                app:layout_heightPercent="25%"
                app:layout_marginTopPercent="50%"
                app:layout_marginLeftPercent="32%"
                app:layout_widthPercent="68%"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/re_password_edittext_forget"
                style="@style/Input_EditText_Configuration"
                android:hint="@string/renewpassword"
                app:layout_heightPercent="25%"
                app:layout_marginTopPercent="75%"
                app:layout_marginLeftPercent="32%"
                app:layout_widthPercent="68%"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/obtain_verifycode_button_forget"
                style="@style/Button_background_white"
                android:layout_alignEnd="@+id/signin_button"
                android:onClick="onClick"
                android:text="@string/obtainCode"
                android:textSize="15sp"
                app:layout_heightPercent="25%"
                app:layout_marginLeftPercent="70%"
                app:layout_marginTopPercent="25%"
                app:layout_widthPercent="25%"/>
            <TextView
                style="@style/Text_black"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/repassword"
                android:textSize="20sp"
                app:layout_heightPercent="25%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="50%"
                app:layout_widthPercent="25%"/>
            <TextView
                style="@style/Text_black"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/ensurePW"
                android:textSize="20sp"
                app:layout_heightPercent="25%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="75%"
                app:layout_widthPercent="25%"/>
            <TextView
                style="@style/Text_black"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/verifycode"
                android:textSize="20sp"
                app:layout_heightPercent="25%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="25%"
                app:layout_widthPercent="30%"/>
        </android.support.percent.PercentRelativeLayout>
        <Button
            android:id="@+id/back_button_forget"
            style="@style/Button_background_title"
            android:onClick="onClick"
            android:text="@string/back"
            android:textSize="20sp"
            app:layout_heightPercent="8%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="15%"/>
        <Button
            android:id="@+id/signin_button_forget"
            style="@style/Button_background_title"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/signin"
            android:textSize="20sp"
            app:layout_heightPercent="8%"
            app:layout_marginRightPercent="1%"
            app:layout_marginTopPercent="1%" app:layout_widthPercent="15%"/>
        <TextView
            style="@style/Button_background_blue"
            android:layout_centerHorizontal="true"
            android:text="@string/forgetpw"
            android:textSize="25sp"
            app:layout_heightPercent="8%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="30%"/>
        <Button
            android:id="@+id/ensure_button"
            style="@style/Button_background_blue"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"
            android:text="@string/queding"
            android:textSize="20sp"
            app:layout_heightPercent="10%"
            app:layout_marginTopPercent="60%"
            app:layout_widthPercent="90%"/>


    </android.support.percent.PercentRelativeLayout>

</LinearLayout>