<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.2">
    </FrameLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="3"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_main_one"
            style="@style/Button_background_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/map"/>
        <Button
            android:id="@+id/btn_main_two"
            style="@style/Button_background_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/charging"/>
        <Button
            android:id="@+id/btn_main_three"
            style="@style/Button_background_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mine"/>
    </LinearLayout>


</LinearLayout>