<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/whitesmoke"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/top_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:background="#ff44aacc"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%"/>
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/sencond_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_marginTopPercent="15%"
            app:layout_heightPercent="20%"
            app:layout_widthPercent="100%">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0.3dp"
                android:background="@color/gainsboro"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="50%"
                app:layout_widthPercent="100%"/>
            <TextView
                android:layout_width="0.3dp"
                android:layout_height="0dp"
                app:layout_marginLeftPercent="31%"
                android:background="@color/gainsboro"
                app:layout_marginTopPercent="5%"
                app:layout_heightPercent="40%"/>
            <TextView
                android:layout_width="0.3dp"
                android:layout_height="0dp"
                app:layout_marginLeftPercent="31%"
                android:background="@color/gainsboro"
                app:layout_marginTopPercent="55%"
                app:layout_heightPercent="40%"/>
            <Button
                android:id="@+id/phone_number_button_signin"
                style="@style/Transparent_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
              
                android:text="@string/phonenumber"
                android:textSize="20sp"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="5%"
                app:layout_widthPercent="25%"/>
            <EditText
                android:id="@+id/phone_number_edittext_signin"
                style="@style/Input_EditText_Configuration"
                android:hint="@string/pleaseinputphone"
                android:inputType="phone"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="32%" app:layout_widthPercent="68%"/>
            <EditText
                android:id="@+id/password_edittext_signin"
                style="@style/Input_EditText_Configuration"
                android:hint="@string/pleaseinputpassword"
                android:inputType="textPassword"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="32%"
                app:layout_marginTopPercent="50%" app:layout_widthPercent="68%"/>
            <TextView
                android:id="@+id/sex_title"
                style="@style/Text_black"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/userpassword"
                android:textSize="20sp"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="50%"
                app:layout_widthPercent="25%"/>
        </android.support.percent.PercentRelativeLayout>
        <Button
            android:id="@+id/back_button_signin"
            style="@style/Button_background_title"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:onClick="onClick"
            android:text="@string/back"
            android:textSize="20sp"
            app:layout_heightPercent="8%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginTopPercent="1%" app:layout_widthPercent="15%"/>
        <Button
            android:id="@+id/register_button_signin"
            style="@style/Button_background_title"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/registerRequest"
            android:textSize="20sp"
            app:layout_heightPercent="8%"
            app:layout_marginRightPercent="1%"
            app:layout_marginTopPercent="1%" app:layout_widthPercent="15%"/>
        <Button
            android:id="@+id/forget_password_button_signin"
            style="@style/Button_background_white"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignEnd="@+id/signin_button_for_signin"
            android:onClick="onClick"
            android:text="@string/forgetpassword"
            android:textColor="@color/base_color"
            android:textSize="15sp"
            app:layout_heightPercent="8%"
            app:layout_marginTopPercent="37%" app:layout_widthPercent="25%"/>
        <TextView
            style="@style/map_button"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="0dp"
            app:layout_heightPercent="8%"
            app:layout_widthPercent="30%"
            app:layout_marginTopPercent="1%"
            android:layout_centerHorizontal="true"
            android:text="@string/signin"/>
        <Button
            android:id="@+id/signin_button_for_signin"
            style="@style/Transparent_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:background="@color/base_color"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_heightPercent="10%" app:layout_marginTopPercent="45%"
            app:layout_widthPercent="90%"/>


    </android.support.percent.PercentRelativeLayout>

</LinearLayout>